[gd_scene load_steps=4 format=3 uid="uid://blmhpgw4c30fb"]

[ext_resource type="Texture2D" uid="uid://dgck5gm8fkwv3" path="res://assets/laser.png" id="1_v7oki"]
[ext_resource type="Script" uid="uid://1v1y12n7lpjg" path="res://bullet.gd" id="1_v8qja"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v8qja"]
radius = 6.0
height = 104.0

[node name="Bullet" type="Area2D"]
script = ExtResource("1_v8qja")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_v7oki")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_v8qja")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="onEnemyAreaEntered"]
[connection signal="body_entered" from="." to="." method="onBulletBodyEntered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="onVisibleOnScreenNotifier2DScreenExited"]
